tests/fixtures/syntax/invalid/document_file_order_negative.repor
# `order` accepts only a non-negative integer; a sign is not part of the
# grammar and fails at parse time.
document file {
  order -5
}
